WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
73136
[Chromium] Web Inspector: assertion failure in InspectorController::restoreInspectorStateFromCookie
https://bugs.webkit.org/show_bug.cgi?id=73136
Summary
[Chromium] Web Inspector: assertion failure in InspectorController::restoreIn...
Yury Semikhatsky
Reported
2011-11-25 08:03:16 PST
Corresponding Chromium bug:
http://code.google.com/p/chromium/issues/detail?id=105433
[ RUN ] PrerenderBrowserTest.NavigateToPrerenderedPageWhenDevToolsAttached /b/build/third_party/zope/__init__.py:19: UserWarning: Module twisted was already imported from /b/build/third_party/twisted_8_1/twisted/__init__.pyc, but /System/Library/Frameworks/Python.framework/Versions/2.6/Extras/lib/python is being added to sys.path import pkg_resources /b/build/third_party/zope/__init__.py:19: UserWarning: Module zope was already imported from /b/build/third_party/zope/__init__.pyc, but /System/Library/Frameworks/Python.framework/Versions/2.6/Extras/lib/python is being added to sys.path import pkg_resources ASSERTION FAILED: !m_inspectorFrontend /b/build/slave/Mac_Builder__dbg_/build/src/third_party/WebKit/Source/WebCore/WebCore.gyp/../inspector/InspectorController.cpp(280) : void WebCore::InspectorController::restoreInspectorStateFromCookie(const WTF::String &) 1 0x62583410 WebCore::InspectorController::restoreInspectorStateFromCookie(WTF::String const&) 2 0x6159ff4a WebKit::WebDevToolsAgentImpl::reattach(WebKit::WebString const&) 3 0x644ce19d DevToolsAgent::OnReattach(std::string const&) 4 0x644cff18 void DispatchToMethod<DevToolsAgent, void (DevToolsAgent::*)(std::string const&), std::string>(DevToolsAgent*, void (DevToolsAgent::*)(std::string const&), Tuple1<std::string> const&) 5 0x644cf305 bool DevToolsAgentMsg_Reattach::Dispatch<DevToolsAgent, DevToolsAgent, void (DevToolsAgent::*)(std::string const&)>(IPC::Message const*, DevToolsAgent*, DevToolsAgent*, void (DevToolsAgent::*)(std::string const&)) 6 0x644cdc7b DevToolsAgent::OnMessageReceived(IPC::Message const&) 7 0x645ec10f RenderViewImpl::OnMessageReceived(IPC::Message const&) 8 0x61373734 MessageRouter::RouteMessage(IPC::Message const&) 9 0x61373685 MessageRouter::OnMessageReceived(IPC::Message const&) 10 0x6115cd40 ChildThread::OnMessageReceived(IPC::Message const&) 11 0x61403520 IPC::ChannelProxy::Context::OnDispatchMessage(IPC::Message const&) 12 0x6140a042 base::internal::RunnableAdapter<void (IPC::ChannelProxy::Context::*)(IPC::Message const&)>::Run(IPC::ChannelProxy::Context*, IPC::Message const&) 13 0x61409f83 base::internal::InvokeHelper<false, void, base::internal::RunnableAdapter<void (IPC::ChannelProxy::Context::*)(IPC::Message const&)>, void ()(IPC::ChannelProxy::Context* const&, IPC::Message const&)>::MakeItSo(base::internal::RunnableAdapter<void (IPC::ChannelProxy::Context::*)(IPC::Message const&)>, IPC::ChannelProxy::Context* const&, IPC::Message const&) 14 0x61409f1f base::internal::Invoker<2, base::internal::BindState<base::internal::RunnableAdapter<void (IPC::ChannelProxy::Context::*)(IPC::Message const&)>, void ()(IPC::ChannelProxy::Context*, IPC::Message const&), void ()(IPC::ChannelProxy::Context*, IPC::Message)>, void ()(IPC::ChannelProxy::Context*, IPC::Message const&)>::Run(base::internal::BindStateBase*) 15 0x5fd2ca2b base::Callback<void ()()>::Run() const 16 0x5fd2a50d MessageLoop::RunTask(base::PendingTask const&) 17 0x5fd2a711 MessageLoop::DeferOrRunPendingTask(base::PendingTask const&) 18 0x5fd2a948 MessageLoop::DoWork() 19 0x5fc964db base::MessagePumpCFRunLoopBase::RunWork() 20 0x5fc95bd2 base::MessagePumpCFRunLoopBase::RunWorkSource(void*) 21 0x977f742b __CFRunLoopDoSources0 22 0x977f4eef __CFRunLoopRun 23 0x977f43c4 CFRunLoopRunSpecific 24 0x977f41f1 CFRunLoopRunInMode 25 0x924a5e04 RunCurrentEventLoopInMode 26 0x924a5bb9 ReceiveNextEventCommon 27 0x924a5a3e BlockUntilNextEventMatchingListInMode 28 0x90983595 _DPSNextEvent 29 0x90982dd6 -[NSApplication nextEventMatchingMask:untilDate:inMode:dequeue:] 30 0x909451f3 -[NSApplication run] 31 0x5fc971fe base::MessagePumpNSApplication::DoRun(base::MessagePump::Delegate*)
Attachments
Patch
(1.54 KB, patch)
2011-11-25 08:11 PST
,
Yury Semikhatsky
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yury Semikhatsky
Comment 1
2011-11-25 08:11:05 PST
Created
attachment 116623
[details]
Patch
Pavel Feldman
Comment 2
2011-11-25 08:26:35 PST
Comment on
attachment 116623
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=116623&action=review
> Source/WebKit/chromium/src/WebDevToolsAgentImpl.cpp:205 > + return;
This should never happen.
WebKit Review Bot
Comment 3
2011-11-25 09:48:17 PST
Comment on
attachment 116623
[details]
Patch Clearing flags on attachment: 116623 Committed
r101176
: <
http://trac.webkit.org/changeset/101176
>
WebKit Review Bot
Comment 4
2011-11-25 09:48:26 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug