[Chromium] Web Inspector: assertion failure in InspectorController::restoreInspectorStateFromCookie https://bugs.webkit.org/show_bug.cgi?id=73136

Don't call connectFrontend twice on reattach.

Reviewed by Pavel Feldman.

* src/WebDevToolsAgentImpl.cpp:
(WebKit::WebDevToolsAgentImpl::reattach):


Canonical link: https://commits.webkit.org/89657@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101176 268f45cc-cd09-0410-ab3c-d52691b4dbfc